--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "moment": "^2.27.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
